test/tests/PostconditionAtReturnInAtPre.expected
PostconditionAtReturnInAtPre.panda:2:26: error: cannot use @return inside @pre
1 error
