test/tests/PostconditionAtReturnInAtPre.panda
class PostconditionAtReturnInAtPre {
    @post(@return = @pre(@return))
    method test(x:Int):Int {
        return x * x
    }
}
